# stt-endpoint

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.streamlit/: config.toml
app/: config.py  errors.py  main.py  schemas.py
app/api/: routes.py
app/providers/: base.py  deepgram_provider.py  elevenlabs_provider.py  grouping.py  local_whisper_provider.py  registry.py
app/services/: audio.py  transcription_service.py
docs/: ARCHITECTURE.md  CHECKLIST.md  DESIGN_DECISIONS.md
docs/superpowers/plans/: 2026-07-15-stt-endpoint.md
docs/superpowers/specs/: 2026-07-15-stt-endpoint-design.md
samples/: README.md  audio_creation.py
streamlit_app/: app.py
tests/: test_api.py  test_audio_chunk.py  test_audio_integration.py  test_audio_validate.py  test_config.py  test_deepgram_provider.py  test_elevenlabs_provider.py  test_grouping.py  test_local_provider.py  test_provider_base.py  test_registry.py  test_schemas.py  test_transcription_service.py
