[project]
name = "stt-endpoint"
version = "1.0.0"
description = "Plug-and-play speech-to-text pipeline: API-first (ElevenLabs, Deepgram) with a local faster-whisper fallback."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Ali Nawaz", email = "nawazktk99@gmail.com" }]
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "python-multipart>=0.0.12",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "httpx>=0.27,<0.28",
    "elevenlabs>=1.13,<2",
    "deepgram-sdk>=3.7,<4",
    "faster-whisper>=1.0,<2",
    "pydub>=0.25,<0.26",
]

[project.optional-dependencies]
ui = ["streamlit>=1.40,<2", "requests>=2.32,<3"]
dev = [
    "pytest>=8.3,<9",
    "pytest-cov>=5,<6",
    "pytest-asyncio>=0.24,<0.25",
    "ruff>=0.7,<0.8",
    "black>=24.10,<25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's dependency injection legitimately uses callables in argument defaults.
"app/api/routes.py" = ["B008"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
